@startuml
class Treatment {
    - String name
    - String dateTime
    - Physiotherapist physiotherapist
    - Patient patient
    - boolean attended
    + Treatment(String name, String dateTime, Physiotherapist physiotherapist)
    + Treatment(String massageTherapy, Object dateTime)
    + String getName()
    + String getDateTime()
    + Physiotherapist getPhysiotherapist()
    + Patient getPatient()
    + boolean isAttended()
    + void bookAppointment(Patient patient)
    + void cancelAppointment()
    + void markAttendance(boolean attended)
}

class Booking {
    - List<Treatment> treatments
    - List<Patient> patients
    + Booking(List<Treatment> treatments)
    + Booking()
    + void addPatient(String id, String name, String address, String phone)
    + void removePatient(String id)
    + void listPatients()
    + Patient getPatientById(String id)
    + boolean bookTreatment(String treatmentName, Patient patient)
    + boolean cancelTreatment(String treatmentName, Patient patient)
    + boolean markAttendance(String treatmentName, Patient patient)
    + void checkAttendance(String treatmentName)
}

class Patient {
    - String id
    - String name
    - String address
    - String phone
    + Patient(String id, String name, String address, String phone)
    + String getId()
    + String getName()
    + String getAddress()
    + String getPhone()
    + void setName(String name)
    + void setAddress(String address)
    + void setPhone(String phone)
}

class Physiotherapist {
    - String id
    - String name
    - String address
    - String phone
    + List<String> expertise
    - List<Treatment> treatments
    + Physiotherapist(String id, String name, String address, String phone, List<String> expertise)
    + void addTreatment(Treatment treatment)
    + String getId()
    + String getName()
    + List<Treatment> getTreatments()
}

class ClinicReport {
    - List<Physiotherapist> physiotherapists
    + ClinicReport(List<Physiotherapist> physiotherapists)
    + void generateReport()
}

class Main {
    + static void main(String[] args)
}

' Relationships
Treatment --> Physiotherapist
Treatment --> Patient
Booking --> Treatment
Booking --> Patient
Physiotherapist --> Treatment
ClinicReport --> Physiotherapist

@enduml
